--- a/inquiz.html
+++ b/inquiz.html
@@ -179,6 +179,8 @@
 			<font color="red"><h3>Question 4</h3>
 				Hint#1 - <img src="images/zxc.jpg" style="width:400px;height:300px;" /><br>
 				Hint#2 - From series in the prior.<br>
+			<font color="red"><h3>Question 7</h3>	
+				Hint#1 - I have been used the entire time since the biginning of the game.<br>
 			<!-- //Codes -->
 </b>
 </h1>
